overflow in css class main fixed

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -40,6 +40,7 @@ body {
 
 .main {
 
+  display: flex;
   background-color: #F7F7F7;
 }
 
